<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nellya.menuproject.MainActivityFragment"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorAccent">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SMS"
        android:id="@+id/sms"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/phone"
        android:layout_toEndOf="@+id/phone"
        android:background="@android:drawable/ic_dialog_email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PHONE"
        android:id="@+id/phone"
        android:layout_below="@+id/sms"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:drawable/ic_menu_call" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WEB"
        android:id="@+id/web"
        android:layout_alignTop="@+id/phone"
        android:layout_toRightOf="@+id/sms"
        android:layout_toEndOf="@+id/sms"
        android:background="@android:drawable/ic_menu_search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MAP"
        android:id="@+id/map"
        android:background="@android:drawable/ic_dialog_map"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/new_activity"
        android:layout_toStartOf="@+id/new_activity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SHARE"
        android:id="@+id/share"
        android:background="@android:drawable/ic_menu_share"
        android:layout_above="@+id/map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NEW_ACTIVITY"
        android:id="@+id/new_activity"
        android:background="@android:drawable/ic_menu_add"
        android:layout_above="@+id/map"
        android:layout_alignLeft="@+id/web"
        android:layout_alignStart="@+id/web"
        android:layout_alignTop="@+id/share" />
</RelativeLayout>
